local storage is involved

--- a/index.html
+++ b/index.html
@@ -454,20 +454,20 @@
                 </div>
                 <div class="booking-form__inputData inputItems">
                   <div class="inputBlock__item">
-                    <label for="">Name</label>
-                    <input class="inputBlock__name" type="text" />
+                    <label for="name">Name</label>
+                    <input class="inputBlock__name" id="name" type="text" />
                   </div>
                   <div class="inputBlock__item">
-                    <label for="">E-Mail</label>
-                    <input class="inputBlock__email" type="text" />
+                    <label for="email">E-Mail</label>
+                    <input class="inputBlock__email" id="email" type="text" />
                   </div>
                   <div class="inputBlock__item">
-                    <label for="">People Number</label>
-                    <input class="inputBlock__phone" type="number" />
+                    <label for="number">People Number</label>
+                    <input class="inputBlock__phone" id="number" type="number" />
                   </div>
                   <div class="inputBlock__item">
-                    <label for="">Date & Time</label>
-                    <input class="inputBlock__dateTime" type="datetime" />
+                    <label for="date">Date & Time</label>
+                    <input class="inputBlock__dateTime" id="date" type="datetime" />
                   </div>
                 </div>
                 <button class="booking-form_btn" type="button">
@@ -577,8 +577,8 @@
                   <div class="order-choice__coupon coupon-data">
                     <span class="coupon-data__coupon-text">Apply your coupon code
                     </span>
-                    <label class="coupon-data__coupon-text" for="">#</label>
-                    <input class="coupon-data__coupon-code" type="text" placeholder="xxxx-xxxx" />
+                    <label class="coupon-data__coupon-text" for="coupon">#</label>
+                    <input class="coupon-data__coupon-code" type="text" id="coupon" placeholder="xxxx-xxxx" />
                   </div>
 
                   <div class="order-choice__item item-choosen">
