--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Kosugi&family=Quicksand:wght@400;500;600;700&display=swap"
     rel="stylesheet" />
-  <link rel="stylesheet" href="./styles/slyles.css" />
-  <title>Pizza prepairing</title>
+  <link rel="stylesheet" href="./css/styles.css" />
+  <title>Pizza mania</title>
 </head>
 
 <body>
